DE: Update HTML + CSS Files

--- a/web/WEB-INF/Anfrage bearbeiten_V2.html
+++ b/web/WEB-INF/Anfrage bearbeiten_V2.html
@@ -10,7 +10,7 @@ and open the template in the editor.
 	  <meta charset="utf-8"> 
     
     <head>
-        <title>Ticketsystem IUBH - Anfrage bearbeiten</title>
+        <title>Ticketsystem IUBH - Ticket bearbeiten</title>
         <link rel="stylesheet" type="text/css" href="style_V2.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -18,7 +18,24 @@ and open the template in the editor.
 	<body id="Rahmen_duenn">
 		<table style="max-width:1000px;" id="Table_Wrap" width=100%> 
 			<tr>
-				<td>									
+				<td>
+					<table id = "Header" width=100%>
+						<tr>
+							<td> Eingeloggt als: [USER.name]
+							</td>
+						</tr>
+					</table>
+					<table id="Title"  width=100% >						
+						<tr>
+							<td>
+							<img src="logoiubh.png" alt="IUBH" style="width:150px";>
+							</td>
+							<td>
+							<h2>Ticket bearbeiten</h2>
+							</td>
+						</tr>					
+					</table>
+					
 					<table id="Rand_neu"  width=100% >
 						<tr>
 							<td width=15%>Priorität</td>   
