--- a/web/WEB-INF/Login Maske (JSF).xhtml
+++ b/web/WEB-INF/Login Maske (JSF).xhtml
@@ -4,7 +4,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:rich="http://richfaces.org/rich">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Login</title>
+        <link rel="stylesheet" type="text/css" media="screen" href="/WEB-INF/style.css"/>
     </h:head>
     <h:body>
         
