Update Login Maske (JSF).xhtml

--- a/web/WEB-INF/Login Maske (JSF).xhtml
+++ b/web/WEB-INF/Login Maske (JSF).xhtml
@@ -5,7 +5,7 @@
       xmlns:rich="http://richfaces.org/rich">
     <h:head>
         <title>Login</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="/WEB-INF/style.css"/>
+        <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
     </h:head>
     <h:body>
         
