JSF Login Maske erstellt

--- a/web/WEB-INF/Login Maske.html
+++ b/web/WEB-INF/Login Maske.html
@@ -35,7 +35,7 @@
 						<tr>  
 							<td> Passwort </td>
 							<td> 
-								<input type="text"></input> 
+								<input type="password"></input> 
 							</td>    
 						</tr>  
 						<tr> 
