--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -4,6 +4,9 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Login</title>
+        <link rel="stylesheet" media="screen,projection"
+        title="Standardstylesheet" href="style.css"
+        type="text/css" />
     </h:head>
 <h:body>
 		<table style="max-width:1000px;" id="Table_Wrap" width="100%">
@@ -22,18 +25,18 @@
 				 <h:form>
 					<table>
 						<tr>  
-							<td> Emailadresse </td>
+							<td> Emailadresse* </td>
 							<td>  
 								<!-- <input type="text" ></input> -->
-                                                                <h:inputText id="Username" value="#{gUI_Login.typedUsername}"></h:inputText>
+                                                                <h:inputText id="Username" value="#{GUI_Login.typedUsername}" required="true"></h:inputText>
                                                                 <h:message for="Username"></h:message>
 							</td> 
 						</tr>		
 						<tr>  
-							<td> Passwort </td>
+							<td> Passwort* </td>
 							<td> 
 								<!--<input type="password"></input> -->
-                                                                 <h:inputSecret id="UserPassword" value="#{gUI_Login.typedUserPassword}"></h:inputSecret>
+                                                                 <h:inputSecret id="UserPassword" value="#{GUI_Login.typedUserPassword}" required="true"></h:inputSecret>
                                                                  <h:message for="UserPassword"></h:message>
 							</td>    
 						</tr>  
@@ -42,8 +45,8 @@
 							<td>    
                                                            
                                                             <!-- <input type="submit" value="Anmelden"> </input> -->
-                                                                <h:commandButton action="#{gUI_Login.CheckLogin}"
-                                                                value="CheckLogin"></h:commandButton>
+                                                                <h:commandButton action="#{GUI_Login.CheckLogin}"
+                                                                value="Login"></h:commandButton>
                                                            
 							</td> 
 						</tr>
@@ -52,12 +55,7 @@
 							<td>
 								<input type="submit" value="Passwort vergessen"> </input>
 							</td>		
-						</tr>
-						<tr>
-							<td colspan="2">
-								<a href="Login Maske.xhtml">Neu hier? Hier geht´s zur Registrierung</a>
-							</td>		
-						</tr>
+						</tr>						
 					</table>
                                       </h:form>	
 				</td>
