Update Login Maske (JSF).xhtml

--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -28,14 +28,14 @@
 							<td> Emailadresse* </td>
 							<td>  
 								<!-- <input type="text" ></input> -->
-                                                                <h:inputText id="Username" value="#{gui_Login.typedUsername}" required="true"></h:inputText>
+                                                                <h:inputText id="Username" value="#{gui_Login.typedUsername}" required="true" label="Emailadresse"></h:inputText>
                                                                 <h:message for="Username"></h:message>
 							</td> 
 						</tr>		
 						<tr>  
 							<td> Passwort* </td>
 							<td> 
-                                                                 <h:inputSecret id="UserPassword" value="#{gui_Login.typedUserPassword}" required="true"></h:inputSecret>
+                                                                 <h:inputSecret id="UserPassword" value="#{gui_Login.typedUserPassword}" required="true" label="Passwort"></h:inputSecret>
                                                                  <h:message for="UserPassword"></h:message>
 							</td>    
 						</tr>  
