--- a/web/Erfassungsmaske_JSF.xhtml
+++ b/web/Erfassungsmaske_JSF.xhtml
@@ -1,7 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"> 
+
     <h:head>
         <title>Erfassungsmaske</title>
         <link rel="stylesheet" media="screen,projection"
@@ -42,12 +44,12 @@
 						<tr>              
 							<td width="15%" >Priorität</td>
 							<td>    
-								<form action="select.htm" style="width:266px" >      
+								<form style="width:266px" >      
 									<select name="Prioritaet" size="1">
 										<option>gering</option>
 										<option>mittel</option>
 										<option>hoch</option>
-									</select>                       
+         									</select>                    
 								</form>
 							</td>
 						</tr>								
