--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Login</title>
@@ -8,6 +9,10 @@
         title="Standardstylesheet" href="style.css"
         type="text/css" />
     </h:head>
+    
+    <f:metadata>
+        <f:viewParam name="Username" value="#{gui_Login.typedUsername}" />
+    </f:metadata>
 <h:body>
 		<table style="max-width:1000px;" id="Table_Wrap" width="100%">
 			<tr>
