Alle Felder auf Managed Beans umgestellt

--- a/web/Ticket_bearbeiten.xhtml
+++ b/web/Ticket_bearbeiten.xhtml
@@ -77,7 +77,8 @@
 							<td> </td>   
 							<td> </td>
 							<td>gebuchte Zeit</td>
-							<td> <input type="int" id = "repTime"/></td>
+							<td> <h:inputText id="ReportedTime" value="#{gui_Ticketbearbeiten.reportedTime}" label="Gebuchte Zeit"></h:inputText>
+                                                        </td>
 						</tr>
 					</table>					
 					
