--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -30,7 +30,7 @@
 				 <h:form>
 					<table>
 						<tr>  
-							<td> Emailadresse* </td>
+							<td> Benutzername* </td>
 							<td>  
 								<!-- <input type="text" ></input> -->
                                                                 <h:inputText id="Username" value="#{gui_Login.typedUsername}" required="true" label="Emailadresse"></h:inputText>
