--- a/web/Ticket_Uebersicht_TutorAdmin.xhtml
+++ b/web/Ticket_Uebersicht_TutorAdmin.xhtml
@@ -116,14 +116,14 @@
 								<input style="width:60%;height:100%" type="text" size="80"></input> 
 							</td>
 						</tr>
-						<tr>
-						<td>
+						<tr>                                                    
+						<td colspan = "4">
+                                                    <h:commandButton value="Suchen" style="margin-right:1em" ></h:commandButton>
+                                                    <h:commandButton value="Filter zurücksetzen"></h:commandButton>
 						</td>
 						<td>
 						</td>
-						<td colspan = "2">
-						<h:commandButton value="Suchen" ></h:commandButton>
-						<h:commandButton value="Filter zurücksetzen"></h:commandButton>
+						<td>						
 						</td>
 						</tr>
 					</table>
