--- a/web/User_Uebersicht.xhtml
+++ b/web/User_Uebersicht.xhtml
@@ -87,14 +87,10 @@
 							</td>							
 						</tr>
 						<tr>
-						<td>
-						</td>
-						<td>
-						</td>
-						<td colspan = "2">
-						<h:commandButton value="Suchen" ></h:commandButton>
-						<h:commandButton value="Filter zurücksetzen"></h:commandButton>
-						</td>
+						<td colspan = "4">
+                                                    <h:commandButton value="Suchen" style="margin-right:1em"></h:commandButton>
+                                                    <h:commandButton value="Filter zurücksetzen"></h:commandButton>
+						</td>						
 						</tr>
 					</table>
 					<table width="100%">
@@ -157,7 +153,7 @@
 								[USER.state]
 								</td>								
 								<td>
-								<img src="delete_icon.png" alt="delete"/>
+								<img src="edit_icon2.png" alt="Tickets"/>
 								</td>
 								<td>
 								<img src="edit_icon.png" alt="edit"/>
@@ -174,7 +170,7 @@
 								[USER.state]
 								</td>								
 								<td>
-								<img src="delete_icon.png" alt="delete"/>
+								<img src="edit_icon2.png" alt="Tickets"/>
 								</td>
 								<td>
 								<img src="edit_icon.png" alt="edit"/>
