--- a/web/User_Uebersicht.xhtml
+++ b/web/User_Uebersicht.xhtml
@@ -152,11 +152,11 @@
 								<td>
 								[USER.state]
 								</td>								
-								<td>
-								<img src="edit_icon2.png" alt="Tickets"/>
+								<td>                                                                
+                                                                <a href="Ticket_Uebersicht_Student.xhtml"><img src="edit_icon_2.png" alt="Tickets" /></a>
 								</td>
-								<td>
-								<img src="edit_icon.png" alt="edit"/>
+								<td>								
+                                                                <a href="Ticket_bearbeiten.xhtml"><img src="edit_icon.png" alt="edit" /></a>
 								</td>
 							</tr>
 							<tr>
@@ -170,10 +170,10 @@
 								[USER.state]
 								</td>								
 								<td>
-								<img src="edit_icon2.png" alt="Tickets"/>
+								<a href="Ticket_Uebersicht_Student.xhtml"><img src="edit_icon_2.png" alt="Tickets" /></a>
 								</td>
 								<td>
-								<img src="edit_icon.png" alt="edit"/>
+								<a href="Ticket_bearbeiten.xhtml"><img src="edit_icon.png" alt="edit" /></a>
 								</td>
 							</tr>
 						</tbody>
