--- a/web/User_Uebersicht.xhtml
+++ b/web/User_Uebersicht.xhtml
@@ -156,7 +156,7 @@
                                                                 <a href="Ticket_Uebersicht_Student.xhtml"><img src="edit_icon_2.png" alt="Tickets" /></a>
 								</td>
 								<td>								
-                                                                <a href="Ticket_bearbeiten.xhtml"><img src="edit_icon.png" alt="edit" /></a>
+                                                                <a href="User_bearbeiten.xhtml"><img src="edit_icon.png" alt="edit" /></a>
 								</td>
 							</tr>
 							<tr>
@@ -173,7 +173,7 @@
 								<a href="Ticket_Uebersicht_Student.xhtml"><img src="edit_icon_2.png" alt="Tickets" /></a>
 								</td>
 								<td>
-								<a href="Ticket_bearbeiten.xhtml"><img src="edit_icon.png" alt="edit" /></a>
+								<a href="User_bearbeiten.xhtml"><img src="edit_icon.png" alt="edit" /></a>
 								</td>
 							</tr>
 						</tbody>
