--- a/web/Ticket_bearbeiten.xhtml
+++ b/web/Ticket_bearbeiten.xhtml
@@ -23,7 +23,7 @@
 						<tr>
 							<td id="Zeit">				
 							</td>
-							<td> Eingeloggt als: [USER.name] 								 
+                                                    <td> Eingeloggt als: #{gui_Ticketbearbeiten.username} 								 
                                                                 <h:commandButton value="Ausloggen"></h:commandButton>
 							</td>
 						</tr>
@@ -86,7 +86,7 @@
 						<tr>
 							<td width="15%">Titel</td>
 							<td>								
-                                                                <h:inputText id="titel" value="#{ticket.titel}" style="width:100%;height:100%"/>
+                                                                <h:inputText id="Title" value="#{gui_Ticketbearbeiten.title}" style="width:100%;height:100%"/>
                                                                 
 							</td>  													  
 						</tr>							
