Speicherfunktion erweitert und angepasst beim Ticket bearbeiten

--- a/web/Ticket_bearbeiten.xhtml
+++ b/web/Ticket_bearbeiten.xhtml
@@ -135,7 +135,7 @@
 					<table id="Buttons" >
 						<tr>
 						   <td> 
-                                                                <h:commandButton value="Speichern"></h:commandButton>
+                                                       <h:commandButton value="Speichern" action="#{gui_Ticketbearbeiten.Save}"></h:commandButton>
 							</td>           
 						</tr> 
 						<tr>
