--- a/web/Ticket_Uebersicht_Student.xhtml
+++ b/web/Ticket_Uebersicht_Student.xhtml
@@ -45,7 +45,7 @@
 								ID
 							</td>
 							<td width="30%">
-								<input style="width:60%;height:100%" type="text"></input> 
+								<h:inputText style="width:60%;height:100%" value="#{gui_TicketUebersicht.ticketID}" size="80" label="ID"></h:inputText> 
 							</td>
 							<td width="20%"></td>
 							<td width="30%"></td>
@@ -106,8 +106,8 @@
 						<td>
 						</td>
 						<td colspan = "2">
-						<h:commandButton value="Suchen" ></h:commandButton>
-						<h:commandButton value="Filter zurücksetzen"></h:commandButton>
+						<h:commandButton value="Suchen" action="#{gui_TicketUebersicht.search}"></h:commandButton>
+						<h:commandButton value="Filter zurücksetzen" action="#{gui_TicketUebersicht.reset}"></h:commandButton>
 						</td>
 						</tr>
 					</table>
@@ -118,23 +118,22 @@
 							</td>
 							<td>
 								Sortieren nach 
-								<form action="select.htm" style="width:100%">      
-									<select name="Prioritaet" size="1">
-										<option>...</option>
-										<option>...</option>
-										<option>...</option>
-									</select>									
-								</form>
+                                                            <h:selectOneMenu id="SortOrder" value="#{gui_TicketUebersicht.sortOrder}">
+                                                                <f:selectItem itemValue="ID" itemLabel="ID" />
+                                                                <f:selectItem itemValue="Datum" itemLabel="Datum" />
+                                                                <f:selectItem itemValue="Kurs" itemLabel="Kurs" />
+                                                                <f:selectItem itemValue="Status" itemLabel="Status" />
+                                                                <f:selectItem itemValue="Titel" itemLabel="Status" />
+                                                            </h:selectOneMenu>
 							</td>
 							<td>
 								Anzahl Ergebnisse
-								<form action="select.htm" style="width:100%">      
-									<select name="Prioritaet" size="1">
-										<option>50</option>
-										<option>100</option>
-										<option>200</option>
-									</select>									
-								</form>
+                                                            <h:selectOneMenu id="TotalResults" value="#{gui_TicketUebersicht.totalResults}">
+                                                                <f:selectItem itemValue="50" itemLabel="50" />
+                                                                <f:selectItem itemValue="100" itemLabel="100" />
+                                                                <f:selectItem itemValue="200" itemLabel="200" />
+                                                                <f:selectItem itemValue="Alle" itemLabel="Alle" />
+                                                            </h:selectOneMenu>
 							</td>
 						</tr>
 					</table>
