Debugging + Erweiterung Suchfunktion

--- a/web/Ticket_Uebersicht_Student.xhtml
+++ b/web/Ticket_Uebersicht_Student.xhtml
@@ -11,7 +11,7 @@
         type="text/css" />
     </h:head>
     
-	<script type="text/javascript" language="javascript" src="TimeFunctions.js"></script>
+	--<script type="text/javascript" language="javascript" src="TimeFunctions.js"></script>
 	
     <h:body onload="startTime()">
         <h:form>
@@ -109,7 +109,7 @@
 						</td>
 						<td colspan = "2">
                                                 <h:commandButton action="#{gui_TicketUebersicht.Search}" value="Suchen" ></h:commandButton>
-						<h:commandButton action="#{gui_TicketUebersicht.Reset}" value="Filter_zurücksetzen"></h:commandButton>
+						<h:commandButton action="#{gui_TicketUebersicht.Reset}" value="Filter zurücksetzen"></h:commandButton>
 						</td>
 						</tr>
 					</table>
