Debugging + Erweiterung Suchfunktion

--- a/web/Ticket_Uebersicht_Student.xhtml
+++ b/web/Ticket_Uebersicht_Student.xhtml
@@ -11,7 +11,7 @@
         type="text/css" />
     </h:head>
     
-	--<script type="text/javascript" language="javascript" src="TimeFunctions.js"></script>
+	<script type="text/javascript" language="javascript" src="TimeFunctions.js"></script>
 	
     <h:body onload="startTime()">
         <h:form>
