Fehlerbehebung Buttonfunktionen + Suchfunktion

--- a/web/Ticket_Uebersicht_Student.xhtml
+++ b/web/Ticket_Uebersicht_Student.xhtml
@@ -89,7 +89,7 @@
 								Kurs
 							</td>
 							<td>
-                                                            <h:selectOneMenu id="Category" value="#{gui_TicketUebersicht.course}">
+                                                            <h:selectOneMenu id="Course" value="#{gui_TicketUebersicht.course}">
                                                                 <f:selectItems value= "#{gui_TicketUebersicht.courseList}" />
                                                             </h:selectOneMenu>
 							</td>
