Label: Benutzername in Emailadresse geändert

--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -30,14 +30,14 @@
 				 <h:form>
                                      <table>
                                                 <tr>
-                                                    <td> <h4>Willkommen bei der Ticketanwendung der IUBH Fernstudium. </h4> </td>
+                                                    <td> <h4>Willkommen bei der Ticketanwendung der IUBH Fernstudium </h4> </td>
                                                     <br/>
                                                 </tr>
                                      </table>
 					<table>
 
                                                 <tr>  
-							<td> Benutzername* </td>
+							<td> Emailadresse* </td>
 							<td>  
 								<!-- <input type="text" ></input> -->
                                                                 <h:inputText id="Username" value="#{gui_Login.typedUsername}" required="true" label="Emailadresse"></h:inputText>
