Label in Benutzername geändert

--- a/web/Login Maske (JSF).xhtml
+++ b/web/Login Maske (JSF).xhtml
@@ -37,7 +37,7 @@
 					<table>
 
                                                 <tr>  
-							<td> Emailadresse* </td>
+							<td> Benutzername* </td>
 							<td>  
 								<!-- <input type="text" ></input> -->
                                                                 <h:inputText id="Username" value="#{gui_Login.typedUsername}" required="true" label="Emailadresse"></h:inputText>
